Ajustes Finais e criação do README

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+        	<groupId>com.h2database</groupId>
+        	<artifactId>h2</artifactId>
+        	<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -56,6 +61,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>4.0.0-SNAPSHOT</version>
+				<configuration>
+					<mainClass>com.meuapp.todolist.TodolistApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -79,5 +88,4 @@
 			</releases>
 		</pluginRepository>
 	</pluginRepositories>
-
 </project>
